Fixed overflow

--- a/wwwroot/web-components/action-bar/action-bar.scss
+++ b/wwwroot/web-components/action-bar/action-bar.scss
@@ -20,10 +20,12 @@
         }
     }
 
-    vi-overflow {
-        vi-action-button {
-            text-align: left;
-        }
+    vi-action-button {
+        text-align: left;
+    }
+    
+    vi-overflow::part(button) {
+        width: var(--theme-h1);
     }
 
     .search {
