--- a/wwwroot/web-components/overflow/overflow.scss
+++ b/wwwroot/web-components/overflow/overflow.scss
@@ -15,10 +15,6 @@
         @include layout-inline();
         position: relative;
 
-        vi-size-tracker {
-            z-index: -1;
-        }
-
         > div#first {
             width: 0;
             opacity: 0;
